[package]
name = "rust-doh-nut"
version = "0.1.0"
authors = ["Aron Tsang <arontsang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1"
async-compat = "0.2"
async-executor = "1.4"
async-task = "4.0"
async-trait = "0.1"
bytes = { package = "bytes", version = "1.0" }
ctrlc = "3.1"
futures-lite = "1.11"
reqwest = { version = "0.11", features = ["native-tls"] }
rustop = "^1"
smol = "1.2"
tokio = { version = "1.4", features = ["rt", "net", "sync", "time"]}



[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
