[package]
name = "rust-doh-nut"
version = "0.1.0"
authors = ["Aron Tsang <arontsang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.2.1"
async-trait = "0.1"
bytes = "^1.0"
reqwest = { version = "0.12.22", features = ["native-tls-vendored"] }
rustop = "1.0"
tokio = { version = "^1.47", features = ["rt", "io-util", "net", "macros"]}



[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
